<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/hint"
        android:textColor="#FF1A212A"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:maxWidth="360dp"
        android:text="@string/delete_hint"
        android:textColor="#FF768292"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <View
        android:id="@+id/horizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="40dp"
        android:background="#FFCCD3DC"
        app:layout_constraintTop_toBottomOf="@id/tvContent" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="#FF1A212A"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/verticalLine"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <View
        android:id="@+id/verticalLine"
        android:layout_width="1px"
        android:layout_height="70px"
        android:background="#FFCCD3DC"
        app:layout_constraintEnd_toStartOf="@+id/tvDelete"
        app:layout_constraintStart_toEndOf="@id/tvCancel"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />

    <TextView
        android:id="@+id/tvDelete"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/delete"
        android:textColor="#FFF54141"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/verticalLine"
        app:layout_constraintTop_toBottomOf="@id/horizontalLine" />
</androidx.constraintlayout.widget.ConstraintLayout>