<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InCallActivity">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:maxWidth="700dp"
        android:singleLine="true"
        android:textColor="#FFFFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/dialing"
        android:textColor="#FFFFFFFF"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <ImageView
        android:id="@+id/endOutGoingCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/end_call"
        android:onClick="onEndCallClick"
        android:src="@mipmap/icon_end_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/outGoingCallBtnGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="endOutGoingCall" />

    <ImageView
        android:id="@+id/endIncomingCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/end_call"
        android:onClick="onEndCallClick"
        android:src="@mipmap/icon_end_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/answerIncomingCall"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/answerIncomingCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/answer_call"
        android:onClick="onAnswerCallClick"
        android:src="@mipmap/icon_answer_call"
        app:layout_constraintBottom_toBottomOf="@id/endIncomingCall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/endIncomingCall" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/incomingCallBtnGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="endIncomingCall,answerIncomingCall" />

    <ImageView
        android:id="@+id/endCurrentCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/end_call"
        android:onClick="onEndCallClick"
        android:src="@mipmap/icon_end_call"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/inCallBtnGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="volumeLayout,btnHandsFree,btnMute,btnRecord,endCurrentCall,btnKeyboard" />

    <include
        android:id="@+id/volumeLayout"
        layout="@layout/layout_in_call_volume_layout" />

    <LinearLayout
        android:id="@+id/btnKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="204dp"
        android:contentDescription="@string/end_call"
        android:gravity="center"
        android:onClick="onKeyboardCallClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnRecord"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/keyboard_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/keyboard"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/answer_call"
        android:gravity="center"
        android:onClick="onRecordClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/btnKeyboard"
        app:layout_constraintEnd_toStartOf="@id/btnMute"
        app:layout_constraintStart_toEndOf="@id/btnKeyboard">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/recording_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/recording"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnMute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/end_call"
        android:gravity="center"
        android:onClick="onMuteClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/btnKeyboard"
        app:layout_constraintEnd_toStartOf="@id/btnHandsFree"
        app:layout_constraintStart_toEndOf="@id/btnRecord">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/mute_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/mute"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnHandsFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/answer_call"
        android:gravity="center"
        android:onClick="onHandsFreeClick"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/btnKeyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMute">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/answer_call"
            android:src="@drawable/hands_free_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/hands_free"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <include
        android:id="@+id/dtmfLayout"
        layout="@layout/layout_dtmf" />


</androidx.constraintlayout.widget.ConstraintLayout>